# major-project

./: .gitignore
backend/: client.js  config.py  index.html  main.py  pyproject.toml  webrtc.py
backend/src/: llm.py  state.py
backend/src/agents/: appointment.py
backend/src/data/: __init__.py  base.py  fake.py
backend/src/prompt/: triage.md
backend/src/tools/: appointment.py  billing.py  report.py
backend/src/workflow/: graph.py  router.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/call/[room]/: page.tsx
